<resources>
    <string name="app_name">PhishApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_register_sign">REGISTER</string>
    <string name="button_signin_sign">SIGN IN</string>
    <string name="text_password_sign">Password</string>
    <string name="text_email_sign">Email</string>
    <string name="text_logo_sign">Phish App</string>
    <string name="button_register_register">REGISTER</string>
    <string name="text_verify_password_register">Retype Password</string>
    <string name="text_password_register">Password</string>
    <string name="text_email_register">Email</string>
    <string name="text_success_userName">User Name</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Phish App</string>
    <string name="nav_header_subtitle">TCSS 450 Labs</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="key_credentials">credentials key</string>
    <string name="text_fragment_blog_blogTitle">Blog Title</string>
    <string name="textview_fragment_blog_blog_teaser">Blog teaser</string>
    <string name="textview_fragment_blog_publish_date">Publish Date</string>
    <string name="text_fragment_blog_publishDate">Blog Date</string>
    <string name="text_fragment_blog_sample">Blog Sample</string>
    <string name="key_blogPost">key blogpost</string>
    <string name="key_setList">key setlist</string>
    <string name="text_fragment_blog_post_sample">Blog Post</string>
    <string name="text_fragment_blog_post_blogDate">Date</string>
    <string name="text_fragment_blog_post_blogTitle">Title</string>
    <string name="button_fragment_blog_post_fullPost">Full Post</string>
    <string name="text_lastName_register">Last Name</string>
    <string name="text_firstName_register">First Name</string>
    <string name="text_userName_register">User Name</string>
    <string name="text_fragment_setList_longDate">Long Date</string>
    <string name="text_fragment_setList_location">Location</string>
    <string name="text_fragment_setList_venue">Venue</string>
    <string name="text_fragment_setlist_item_longDate">Long Date</string>
    <string name="text_fragment_setlist_item_location">Location</string>
    <string name="text_fragment_setlist_item_venue">Venue</string>
    <string name="text_fragment_setlist_item_setListNotes">Set List Notes</string>
    <string name="text_fragment_setlist_item_setListData">Set List Data</string>
    <string name="text_fragment_setlist_item_fullText">FULL TEXT</string>
</resources>
