<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_setList"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_fragment_setList_longDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/text_fragment_setList_longDate"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/text_fragment_setList_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/text_fragment_setList_location"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/text_fragment_setList_venue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:layout_weight="1"
        android:text="@string/text_fragment_setList_venue"
        android:textAppearance="?attr/textAppearanceListItem" />
</LinearLayout>
