<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="@color/cardview_light_background">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/customerborder"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_fragment_blog_blogTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimary"
                android:text="@string/text_fragment_blog_blogTitle"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/text_fragment_blog_publishDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/text_fragment_blog_publishDate"
                android:textColor="@color/colorPrimary" />


            <TextView
                android:id="@+id/text_fragment_blog_sample"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/text_fragment_blog_sample"
                android:textColor="@android:color/black" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>

