<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlogPostFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/customerborder">

        <TextView
            android:id="@+id/text_fragment_blog_post_blogTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/text_fragment_blog_post_blogTitle"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_fragment_blog_post_blogDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_fragment_blog_post_blogDate"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_fragment_blog_post_blogTitle" />


        <TextView
            android:id="@+id/text_fragment_blog_post_sample"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_fragment_blog_post_sample"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_fragment_blog_post_blogDate" />

        <Button
            android:id="@+id/button_fragment_blog_post_fullPost"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="95dp"
            android:layout_height="37dp"
            android:layout_marginEnd="16dp"
            android:text="@string/button_fragment_blog_post_fullPost"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/text_fragment_blog_post_sample"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_fragment_blog_post_blogTitle"
            app:layout_constraintVertical_bias="0.228" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>